@@ -1,4 +1,5 @@
 Release 0.1-1:
+  * Add some remote checks, address validation in client.
   * Changed behavior of exit(); added "client.only" option.
   * Rearrange internals.
   * Add vignette.
